# practica_medica

./: .azure-pipelines.yml  .gitignore  .pre-commit-config.yaml  .safety-project.ini  README.md  practica_medica.code-workspace  pyproject.toml
.azure-pipelines/: pip-install.yml  run-tests.yml  validate-tests.yml
src/adapter/selenium/: selenium_adapter.py  wait_manager.py
src/config/: driver_manager.py
src/data/: agenda_medica load.yaml  agenda_medica.yaml  duis.yaml  informe_de_solicitudes.yaml  portal_operadores.yaml  portal_operadores_load.yaml
src/framework/pages/catalogo_reportes/reporte_incapacidades/: locators.py  page.py  workflow.py
src/framework/pages/login/: locators.py  page.py
src/framework/pages/menu_operadores/portal_de_operadores/: load_data.py  locators.py  page.py  workflow.py
src/framework/pages/navegacion/: locators.py  navegacion.py
src/framework/pages/practica_medica/agenda_medica/: locators.py  page.py  workflow.py
src/framework/pages/practica_medica/informe_de_solicitudes/: locators.py  page.py  workflow.py
src/framework/pages/practica_medica/panel_de_encargado_de_turno/: locators.py  page.py  workflow.py
src/framework/pages/tablero_medico/: locators.py  page.py  workflow.py
src/framework/ports/: ui_port.py
src/framework/utilities/: checkbox_helper.py  combobox_helper.py  configuration.py  data_generator.py  datagridview_helper.py  logger.py
src/service/api_duis/: api_duis.py
src/tests/: conftest.py
src/tests/e2e/catalogo_reportes/: test_reporte_incapacidades.py
src/tests/e2e/login/: test_login.py
src/tests/e2e/menu_operadores/: test_portal_de_operadores.py
src/tests/e2e/practica_medica/: test_agenda_medica.py  test_informe_de_solicitudes.py  test_panel_de_encargado_de_turno.py
src/tests/e2e/tablero_medico/: test_tablero_medico.py
src/tests/load/menu_operadores/: test_load_portal_de_operadores.py
src/tests/load/practica_medica/: test_load_practica_medica.py
src/tests/load/tablero_medico/: test_load_tablero_medico.py
